--- a/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
@@ -60,7 +60,7 @@
               <button class="ql-image"></button>
             </span>
             </div>
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" id="saveButton">
                 <i data-feather="send" class="mr-2"></i>ارسال</button>
         </div>
     </div>
