--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase.html
@@ -23,7 +23,8 @@
                         </tbody>
                         <tfoot>
                             <tr class="add-row" id="add-row">
-                                <td colspan="5">+ کالای جدید</td>
+                                <td colspan="5">  <button class="btn btn-primary">
+                                    + کالای جدید</button></td>
                             </tr>
                         </tfoot>
                     </table>
