--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase.html
@@ -8,8 +8,8 @@
             <div class="card-body">
                 <h6 class="card-title">{{title}}</h6>
                 <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
-                    <table class="table table-striped">
-                        <thead class="table-light">
+                    <table class="table  table-bordered">
+                        <thead>
                             <tr>
                                 <th>نام کالا</th>
                                 <th>تعداد</th>
@@ -23,8 +23,8 @@
                         </tbody>
                         <tfoot>
                             <tr class="add-row" id="add-row">
-                                <td colspan="5">  <button class="btn btn-primary">
-                                    + کالای جدید</button></td>
+                                <td colspan="5">  <button class="btn btn-primary  btn-floating">
+                                    <i class="ti-plus"></i></button></td>
                             </tr>
                         </tfoot>
                     </table>
