--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
@@ -11,8 +11,11 @@
         <div class="col-md-3 app-sidebar">
             <div class="card">
                 <div class="card-body">
-                    <button class="btn btn-secondary btn-block" data-toggle="modal" data-target="#compose">
+                    <button class="btn btn-outline-dark btn-block btn-block2" data-url="{% url 'list_purchase' %}" >
                         درخواست جدید                   </button>
+                        <button class="btn btn-outline-dark btn-block .btn-block3" data-url="#" >
+                            درون ریزی                 </button>
+                       
                 </div>
                 {% comment %} <div class="app-sidebar-menu">
                     <div class="list-group list-group-flush">
@@ -598,15 +601,76 @@
                 <!-- end::app-lists -->
 
                 <!-- begin:app-detail -->
-                <div class="card app-detail">
-                    {% include 'mrp/purchase/createReq.html' %}
+                <div class="card app-detail ajax-content" style="overflow: scroll;">
+                    
                 </div>
             </div>
         </div>
     </div>
 
 </div>
-
+<div class="modal fade" tabindex="-1" role="dialog" id="compose">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">ارسال ایمیل به</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <i class="ti-close"></i>
+                </button>
+            </div>
+            <div class="modal-body">
+                
+                <div class="d-flex justify-content-between m-b-20">
+                    <div>
+                        <a href="#" data-toggle="tooltip" title=""
+                           class="btn btn-outline-light btn-sm mr-2"
+                           data-original-title="ذخیره">
+                            <i data-feather="save"></i>
+                        </a>
+                        <a href="#" data-toggle="tooltip" title=""
+                           class="btn btn-outline-light btn-sm mr-2"
+                           data-original-title="حذف">
+                            <i data-feather="trash-2"></i>
+                        </a>
+                    </div>
+                </div>
+                <form>
+                    <div class="form-group">
+                        <input type="text" class="form-control tagsinput" placeholder="به"
+                               value="example@test.com.tr" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="موضوع" required>
+                    </div>
+                    <div class="form-group">
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" multiple id="customFileLangHTML">
+                            <label class="custom-file-label" for="customFileLangHTML" data-browse="انتخاب فایل">لورم ایپسوم</label>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="compose-quill-editor mb-3"></div>
+                        <div class="d-flex justify-content-between">
+                            <div class="compose-quill-toolbar">
+                            <span class="ql-formats mr-0">
+                                <button class="ql-bold"></button>
+                                <button class="ql-italic"></button>
+                                <button class="ql-underline"></button>
+                                <button class="ql-link"></button>
+                                <button class="ql-image"></button>
+                            </span>
+                            </div>
+                            <button class="btn btn-primary">
+                                <i data-feather="send" class="mr-2"></i>
+                                ارسال
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 {% block javascript %}
