--- a/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
@@ -5,7 +5,7 @@
         </a>
         <h5 class="mb-0">
             درخواست
-            <span class="badge bg-success badge-pill ml-1">پیش نویس</span>
+            <span class="badge bg-warning badge-pill ml-1">پیش نویس</span>
         </h5>
     </div>
     <div class="app-detail-action-right">
@@ -29,23 +29,7 @@
      {% include 'mrp/purchase/purchase.html' %}
     </div>
     <hr class="m-0">
-    <div class="card-body">
-        <h6 class="mb-3 font-size-11 text-uppercase">فایلهای پیوست شده</h6>
-        <ul class="list-unstyled mb-0">
-            <li class="small">
-                <a href="#">
-                    <i data-feather="paperclip" class="mr-1 width-15 height-15"></i>
-                    uikit-design.psd
-                </a>
-            </li>
-            <li class="small">
-                <a href="#">
-                    <i data-feather="paperclip" class="mr-1 width-15 height-15"></i>
-                    uikit-design.sketch
-                </a>
-            </li>
-        </ul>
-    </div>
+    
     <hr class="m-0">
     <div class="card-body">
         <h6 class="mb-3 font-size-11 text-uppercase">پاسخ</h6>
