--- a/tiny_mrp/mrp/templates/mrp/temp2.html
+++ b/tiny_mrp/mrp/templates/mrp/temp2.html
@@ -109,23 +109,23 @@
 
             <li class="nav-item">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
-                    <img width="18" class="mr-2" src="assets/media/image/flags/261-china.png" alt="flag"> چین
+                    <img width="18" class="mr-2" src="{% static 'assets/media/image/flags/261-china.png' %}" alt="flag"> چین
                 </a>
                 <div class="dropdown-menu dropdown-menu-right">
                     <a href="#" class="dropdown-item">
-                        <img width="18" src="assets/media/image/flags/003-tanzania.png" class="mr-2" alt="flag">
+                        <img width="18" src="{% static 'assets/media/image/flags/003-tanzania.png' %}" class="mr-2" alt="flag">
                         تانزانیا
                     </a>
                     <a href="#" class="dropdown-item">
-                        <img width="18" src="assets/media/image/flags/262-united-kingdom.png" class="mr-2"
+                        <img width="18" src="{% static 'assets/media/image/flags/262-united-kingdom.png' %}" class="mr-2"
                              alt="flag"> انگلستان
                     </a>
                     <a href="#" class="dropdown-item">
-                        <img width="18" src="assets/media/image/flags/013-tunisia.png" class="mr-2" alt="flag">
+                        <img width="18" src="{% static 'assets/media/image/flags/013-tunisia.png' %}" class="mr-2" alt="flag">
                         تونس
                     </a>
                     <a href="#" class="dropdown-item">
-                        <img width="18" src="assets/media/image/flags/044-spain.png" class="mr-2" alt="flag"> اسپانیا
+                        <img width="18" src="{% static 'assets/media/image/flags/044-spain.png' %}" class="mr-2" alt="flag"> اسپانیا
                     </a>
                 </div>
             </li>
@@ -166,7 +166,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-left dropdown-menu-big">
                     <div class="p-4 text-center d-flex justify-content-between"
-                         data-backround-image="assets/media/image/image1.jpg">
+                         data-backround-image="{% static 'assets/media/image/image1.jpg' %}">
                         <h6 class="mb-0">گفت‌گوها</h6>
                         <small class="font-size-11 opacity-7">2 گفت‌گو خوانده نشده</small>
                     </div>
@@ -176,7 +176,7 @@
                                 <a href="#" class="list-group-item d-flex hide-show-toggler">
                                     <div>
                                         <figure class="avatar avatar-sm m-r-15">
-                                            <img src="assets/media/image/user/man_avatar1.jpg"
+                                            <img src="{% static 'assets/media/image/user/man_avatar1.jpg' %}"
                                                  class="rounded-circle" alt="user">
                                         </figure>
                                     </div>
@@ -198,7 +198,7 @@
                                    class="list-group-item d-flex align-items-center hide-show-toggler">
                                     <div>
                                         <figure class="avatar avatar-sm m-r-15">
-                                            <img src="assets/media/image/user/women_avatar5.jpg"
+                                            <img src="{% static 'assets/media/image/user/women_avatar5.jpg' %}"
                                                  class="rounded-circle" alt="user">
                                         </figure>
                                     </div>
@@ -223,7 +223,7 @@
                                    class="list-group-item d-flex align-items-center hide-show-toggler">
                                     <div>
                                         <figure class="avatar avatar-sm m-r-15">
-                                            <img src="assets/media/image/user/man_avatar3.jpg"
+                                            <img src="{% static 'assets/media/image/user/man_avatar3.jpg' %}"
                                                  class="rounded-circle" alt="user">
                                         </figure>
                                     </div>
@@ -244,7 +244,7 @@
                                 <a href="#" class="list-group-item d-flex hide-show-toggler">
                                     <div>
                                         <figure class="avatar avatar-sm m-r-15">
-                                            <img src="assets/media/image/user/man_avatar2.jpg"
+                                            <img src="{% static 'assets/media/image/user/man_avatar2.jpg' %}"
                                                  class="rounded-circle" alt="user">
                                         </figure>
                                     </div>
@@ -266,7 +266,7 @@
                                    class="list-group-item d-flex align-items-center hide-show-toggler">
                                     <div>
                                         <figure class="avatar avatar-sm m-r-15">
-                                            <img src="assets/media/image/user/women_avatar1.jpg"
+                                            <img src="{% static 'assets/media/image/user/women_avatar1.jpg' %}"
                                                  class="rounded-circle" alt="user">
                                         </figure>
                                     </div>
@@ -303,7 +303,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-left dropdown-menu-big">
                     <div class="p-4 text-center d-flex justify-content-between"
-                         data-backround-image="assets/media/image/image1.jpg">
+                         data-backround-image="{% static 'assets/media/image/image1.jpg' %}">
                         <h6 class="mb-0">اطلاعیه‌ها</h6>
                         <small class="font-size-11 opacity-7">1 اطلاعیه خوانده نشده</small>
                     </div>
@@ -410,7 +410,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-left dropdown-menu-big">
                     <div class="p-4 text-center d-flex justify-content-between"
-                         data-backround-image="assets/media/image/image1.jpg">
+                         data-backround-image="{% static 'assets/media/image/image1.jpg' %}">
                         <h6 class="mb-0">تنظیمات</h6>
                     </div>
                     <div>
