--- a/tiny_mrp/mrp/templates/mrp/purchase/purchase.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchase.html
@@ -19,7 +19,19 @@
                             </tr>
                         </thead>
                         <tbody id="table-body">
-                            
+                            {% for i in items %} 
+                            <tr data-id="{{i.id}}">
+                                <td contenteditable="true" class="editable-cell part-name" data-id="{{i.item_name.id}}" data-partcode="{{i.item_name.partCode}}">{{i.item_name.partName}}</td>
+                                <td contenteditable="true" class="editable-cell">{{i.quantity}}</td>
+                                <td contenteditable="true" class="editable-cell machine-name" data-id="{{i.consume_place.id}}" data-machinecode="{{i.consume_place.assetCode}}">{{i.consume_place.assetName}}</td>
+                                <td contenteditable="true" class="editable-cell description" data-id="">{{i.description}}</td>
+                                <td>
+                                <button class="btn btn-sm  delete-row">
+                                    <i class="fa fa-trash"></i> <!-- Tiny Trash Icon -->
+                                </button>
+                            </td>
+                            </tr>
+                            {% endfor %}
                         </tbody>
                         <tfoot>
                             <tr class="add-row" id="add-row">
