--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
@@ -148,7 +148,7 @@
                 <div class="app-lists">
                     <ul class="list-group list-group-flush">
                         {% for i in req %}
-                        <li class="list-group-item">
+                        <li class="list-group-item" data-url="{% url 'update_purchase' i.id %}">
                             <div>
                                 <div class="custom-control custom-checkbox mr-2">
                                     <input type="checkbox" class="custom-control-input" id="customCheck{{i.id}}">
