--- a/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
@@ -1,6 +1,16 @@
 {% extends 'mrp/blank-page.html' %}
 {% load static %}
+{% block stylesheet %}
+<!-- Datepicker -->
+<link rel="stylesheet" href="{% static 'vendors/datepicker/daterangepicker.css' %}">
+<link rel="stylesheet" href="{% static 'assets/Datepiker/persian-datepicker.css' %}">
 
+
+<!-- Fullcalendar -->
+<link rel="stylesheet" href="{% static 'vendors/fullcalendar/fullcalendar.min.css' %}" type="text/css">
+<link href="{% static 'assets/Cal/fullcalendar.css' %}" rel='stylesheet' />
+<link href="{% static 'assets/Cal/fullcalendar.print.css' %}" rel='stylesheet' media='print' />
+{% endblock %}
 {% block content %}
 
 <div class="row  app-block">
@@ -65,6 +75,14 @@
                 <div class="col-md-8">
                     <div class="card">
                         <div class="card-body">
+                            <div class="card-title d-md-flex align-items-start justify-content-between">
+                                <h6 class="card-title"></h6>
+                                <div class="reportrange btn btn-outline-light btn-sm mt-3 mt-md-0">
+                                    <i class="ti-calendar mr-2"></i>
+                                    <span class="text"></span>
+                                    <i class="ti-angle-down ml-2"></i>
+                                </div>
+                            </div>
                             <div class="d-flex justify-content-between">
                                 
                                 <div>
@@ -224,8 +242,6 @@
 
 
 <!-- a -->
-<script src="{% static 'assets/Cal/moment.js' %}"></script>
-<script src="{% static 'assets/Cal/moment-jalaali.js' %}"></script>
 <script src="{% static 'assets/Cal/fullcalendar.js' %}"></script>
 <script src="{% static 'assets/Cal/fa.js' %}"></script>
 
@@ -233,7 +249,8 @@
 <!-- Dashboard scripts -->
 
 <!-- App scripts -->
-<script src="{% static 'assets/js/app.min.js' %}"></script>
 <script src="{% static 'project/dash.js' %}"></script>
+
+
 
 {% endblock %}
