--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_amar_tolid.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_amar_tolid.html
@@ -95,7 +95,7 @@
                             {% endfor %}
 
                             <th>جمع </th>
-                            <th>راندمان کل</th>
+                            <!-- <th>راندمان کل</th> -->
                         </tr>
                         </thead>
                         <tbody>
@@ -106,7 +106,7 @@
                             <td class="{{i.css}}">{{k.value|floatformat:0}}</td>
                             {% endfor %}
                             <td class="{{i.css}}">{{i.sum|floatformat:0}}</td>
-                            <td class="{{i.css}}">{{i.max_speed}}</td>
+                            <!-- <td class="{{i.css}}">{{i.max_speed}}</td> -->
                         </tr>
 
 
@@ -120,7 +120,7 @@
                           {% endfor %}
 
                           <th>جمع </th>
-                          <th>راندمان کل</th>
+                          <!-- <th>راندمان کل</th> -->
                         </tr>
                         </tfoot>
                     </table>
