--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_amar_tolid_brief.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_amar_tolid_brief.html
@@ -93,7 +93,7 @@
                            
 
                             <th>جمع </th>
-                            <th>راندمان کل</th>
+                            <!-- <th>راندمان کل</th> -->
                         </tr>
                         </thead>
                         <tbody>
@@ -102,7 +102,7 @@
                             <td class="{{i.css}}">{{i.machine}}</td>
                            
                             <td class="{{i.css}}">{{i.sum|floatformat:0}}</td>
-                            <td class="{{i.css}}">{{i.max_speed}}</td>
+                            <!-- <td class="{{i.css}}">{{i.max_speed}}</td> -->
                         </tr>
 
 
@@ -116,7 +116,7 @@
                           {% endfor %} -->
 
                           <th>جمع </th>
-                          <th>راندمان کل</th>
+                          <!-- <th>راندمان کل</th> -->
                         </tr>
                         </tfoot>
                     </table>
