--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -161,6 +161,12 @@
 
         </a>
       </li>
+      <li>
+        <a href="{% url 'list_entry_form' %}">
+          <span>نوع مشخصه ها</span>
+
+        </a>
+      </li>
    
       
 
