--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -110,6 +110,8 @@
                                   <thead class="thead-dark">
                                     <tr>
                                       <th>نام ماشین</th>
+                                      <th>مشخصه</th>
+
                                       <th>واحد</th>
 
                                       <th>نمره</th>
@@ -119,6 +121,7 @@
                                       <th> کنتور انتهای شیفت</th>
                                       <th>100%</th>
                                       <th>تولید</th>
+                                      <th>ضایعات</th>
 
                                     </tr>
                                   </thead>
@@ -128,7 +131,15 @@
                                     
                                     {% if c.machine.assetCategory.id == cat_item.id %}
                                     <tr data-machine={{c.machine.id}} data-shift="{{i.id}}" data-speed2="{{c.speed}}">
-                                      <td>{{c.machine.assetName}}</td>
+                                      <td data-assetcategory2="{{c.machine.assetCategory2.id}}">{{c.machine.assetName}}</td>
+                                      <td><select name="moshakhase" class="form-control select moshakhase" required="">
+                                        <option value="-1" selected="">---------</option>
+                                        {% for moshakhase in moshakhastat %}
+                                      
+                                        <option value="{{moshakhase.entry.id}}"  data-assetdetails='{{moshakhase.assetdetail}}'>{{moshakhase.entry}}</option>
+                                      
+                                        {% endfor %}
+                                      </select></td>
                                       <td contenteditable="true" class="editable-cell btc vahed selectable1" data-vahed="{{c.machine.assetVahed}}">{{c.vahed}}</td>
 
                                       <td contenteditable="true" class="editable-cell btc nomre selectable1">{{c.nomre}}</td>
@@ -141,6 +152,7 @@
 
 
                                       <td contenteditable="true" data-formula="{{c.formula}}" class='production'></td>
+                                      <td contenteditable="true"  class='editable-cell  waste selectable1'></td>
 
                                     </tr>
                                     {% endif %}
