--- a/tiny_mrp/mrp/templates/mrp/zayeat_vazn/monthly_zayeat.html
+++ b/tiny_mrp/mrp/templates/mrp/zayeat_vazn/monthly_zayeat.html
@@ -1,5 +1,24 @@
 {% extends 'mrp/blank-page.html' %}
-
+{% block stylesheet %}
+<style>
+    @media print {
+        .table-responsive {
+          margin: 10px;
+          page-break-inside: auto;
+        }
+      
+        table {
+          page-break-inside: avoid;
+          border-collapse: collapse;
+        }
+      
+        th, td {
+          border: 1px solid black !important;
+          padding: 5px;
+        }
+      }
+  </style>
+{% endblock %}
 {% block content %}
 {% load static %}
 {% load custom_filters %}
