--- a/tiny_mrp/mrp/templates/mrp/zayeat_vazn/zayeatVaznList.html
+++ b/tiny_mrp/mrp/templates/mrp/zayeat_vazn/zayeatVaznList.html
@@ -33,7 +33,7 @@
       </td>
       {% if forloop.last %}
       <td style="  width: 100px; /* Set the width of the editable cell */   min-width: 100px; /* Ensure a minimum width */    max-width: 100px; /* Ensure a maximum width */    outline: none; /* Remove the default focus outline */    border: 1px solid #ccc; /* Add a border for better visibility */    padding: 5px; /* Add padding for better appearance */    /* Other styles as needed */">
-        {{zayeat_vazn|get_item:i.id|get_code_from_shift:c.id}}
+        {{zayeat_vazn|get_item:i.id|get_code_from_shift:c.id|default_if_none:"--"}}
       </td>
       {% endif %}
       {% endfor %}
