--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -128,6 +128,8 @@
       <li><a href="{% url 'asset_failure_list' %}">ثبت آمار توقف
       <li><a href="{% url 'calendar_asset_failure' %}">آمار توقف
       </a></li>
+      <li><a href="{% url 'monthly_zayeat_detaild_report' %}">آمار ًایعات ماهانه
+      </a></li>
       <li><a href="{% url 'monthly_detaild_failured_report' %}">مشاهده توقفات ماهانه</a></li>
 
 
