--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -33,7 +33,7 @@
   <!-- end::preloader -->
 
   <!-- begin::header -->
-  <div class="header">
+  <div class="header d-print-none">
 
     <div>
         <ul class="navbar-nav">
@@ -148,7 +148,7 @@
 
     <!-- begin::footer -->
     <footer>
-      <div class="container-fluid">
+      <div class="container-fluid d-print-none">
         <div>© 1402 |سیستم مدیریت تولید دیانا <a href="https://sarvrayan.ir">سرو رایان</a></div>
 
      
