--- a/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznCreate.html
+++ b/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznCreate.html
@@ -7,10 +7,11 @@
     <h4 class="modal-title">جدید</h4>
   </div>
   <div class="modal-body">
+    
    {% include 'mrp/zayeat_vazn/partialZayeatVaznForm.html' %}
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default">انصراف</button>
+    <button type="button" class="btn btn-default" data-dismiss="modal">انصراف</button>
 
     <button type="submit" class="btn btn-primary" >ذخیره</button>
 
