--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -130,6 +130,7 @@
       <li><a href="{% url 'calendar_asset_failure' %}">آمار توقف
       </a></li>
       <li><a href="{% url 'monthly_detaild_failured_report' %}">مشاهده توقفات ماهانه</a></li>
+      <li><a href="{% url 'list_entry_form' %}">مشخصات</a></li>
 
 
 
