--- a/tiny_mrp/mrp/templates/mrp/dashboard/info_card.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/info_card.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row justify-content-center">
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="card">
                     <div class="card-body">
